Añadidos publicación y consumo de mensajes colas RabbitMQ.